# django-crm

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
nginx/: default.conf
scripts/: entrypoint.sh
src/apps/Common/: apps.py  views.py
src/apps/Common/management/commands/: add_default_groups.py  init_admin.py
src/apps/CustomerSupport/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
src/apps/CustomerSupport/migrations/: 0001_initial.py  0002_alter_customerrequest_contract_number_and_more.py  0003_alter_customerrequest_subject.py  0004_alter_customerrequest_subject.py
src/apps/CustomerSupport/templates/CustomerSupport/: requests_create.html  requests_detail.html  requests_edit.html  requests_list.html
src/apps/common/: models.py  views.py
src/apps/common/management/commands/: add_default_groups.py
src/apps/common/templates/common/: base.html
src/apps/users/: urls.py  views.py
src/apps/users/templates/users/: login.html
src/config/: asgi.py  settings.py  urls.py  wsgi.py
